[package]
name = "dag-orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
types = { path = "../types" }
executor-core = { path = "../executor-core" }
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
chrono = { version = "0.4", features = ["serde"] }
