[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
executor-core = { path = "../executor-core" }
types = { path = "../types" }
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4"] }
deadpool-postgres = { version = "0.11", features = ["serde"] }
tracing = "0.1"
async-trait = "0.1"
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
