[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
executor-core = { path = "../executor-core" }
types = { path = "../types" }
dag-orchestrator = { path = "../dag-orchestrator" }
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4"] }
deadpool-postgres = { version = "0.11", features = ["serde"] }
tracing = "0.1"
async-trait = "0.1"
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
postgres-types = { version = "0.2", features = ["with-serde_json-1", "with-uuid-1", "with-chrono-0_4"] }

[dev-dependencies]
tokio-test = "0.4"
testcontainers = "0.15"
