[package]
name = "k8s-client"
version = "0.1.0"
edition = "2021"

[dependencies]
types = { path = "../types" }
k8s-openapi = { version = "0.21", features = ["v1_25", "schemars"] }
kube = { version = "0.88", features = ["runtime", "derive"] }
kube-core = "0.88"
tracing = "0.1"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
